# SATSolver

./: CMakeLists.txt  README.md  benchmark_runner.cpp  clause_allocator.h  debug.h  dimacs.cpp  dimacs.h  main.cpp  min_heap.h  sat_preprocessor.cpp  sat_preprocessor.h  sat_remapper.cpp  sat_remapper.h  sat_utils.cpp  sat_utils.h  solver.cpp  solver.h  solver_runner.cpp  solver_runner.h  solver_types.h  vsids_picker.h
